Fix alignment of picky text

--- a/src/sass/_picker.scss
+++ b/src/sass/_picker.scss
@@ -24,7 +24,9 @@
     padding: 0 1.5em 0 .7em;
 
     > span {
-      display: inline-block;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
